src/objects/Form__c.object
<CustomObject>
    <description>Object that represents a Form in a Community</description>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FormBehaviour__c</fullName>
        <label>Form Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Animated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrievalClass__c</fullName>
        <label>Retrieval Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaveClass__c</fullName>
        <label>Save Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FormObjectsStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StyleClass__c</fullName>
        <label>Style Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ClusterSharing__c</fullName>
        <label>ClusterSharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>ClusterNotUpdatable</fullName>
        <active>false</active>
        <description>This Validation Rule avoid Cluster to be modified when already have a value.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; NOT(ISBLANK( Cluster__c )) &amp;&amp; ISCHANGED( Cluster__c )</errorConditionFormula>
        <errorDisplayField>Cluster__c</errorDisplayField>
        <errorMessage>Can not modify Cluster field when already have a value.</errorMessage>
    </validationRules>
</CustomObject>